src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from src/Parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseTok -> Program                         (0)
	Program ->                                         (1)
	Program -> FuncDecl Program                        (2)
	FuncDecl -> def id ArgList ':=' Term               (3)
	ArgList ->                                         (4)
	ArgList -> id ArgList                              (5)
	Term -> let id ':=' Term in Term                   (6)
	Term -> if Term then Term else Term                (7)
	Term -> fun id '=>' Term                           (8)
	Term -> forall id ':' Term '=>' Term               (9)
	Term -> exist id ':' Term '=>' Term                (10)
	Term -> for id ':' Term '@' id ArgList '=>' Term   (11)
	Term -> match Term with Clauses end                (12)
	Term -> Term Term                                  (13)
	Term -> Term '||' Term                             (14)
	Term -> Term '&&' Term                             (15)
	Term -> Term '+' Term                              (16)
	Term -> Term '-' Term                              (17)
	Term -> Term '*' Term                              (18)
	Term -> Term '/' Term                              (19)
	Term -> Term '%' Term                              (20)
	Term -> Term '++' Term                             (21)
	Term -> Term '<' Term                              (22)
	Term -> Term '>' Term                              (23)
	Term -> Term '==' Term                             (24)
	Term -> Term '::' Term                             (25)
	Term -> Term ';' Term                              (26)
	Term -> '(' Term ')'                               (27)
	Term -> '{' Term '|' Binders '}'                   (28)
	Term -> Lit                                        (29)
	Term -> id                                         (30)
	Binders -> id '<-' Term                            (31)
	Binders -> id '<-' Term ',' Binders                (32)
	Lit -> string                                      (33)
	Lit -> float                                       (34)
	Lit -> int                                         (35)
	Lit -> true                                        (36)
	Lit -> false                                       (37)
	Lit -> '[' ListLit ']'                             (38)
	ListLit ->                                         (39)
	ListLit -> Term                                    (40)
	ListLit -> Term ',' ListLit                        (41)
	Clauses ->                                         (42)
	Clauses -> '|' Pattern '=>' Term Clauses           (43)
	Pattern -> Pattern1 '::' Pattern                   (44)
	Pattern -> Pattern1                                (45)
	Pattern1 -> '#' id Pattern2s                       (46)
	Pattern1 -> Pattern2                               (47)
	Pattern2 -> '(' Pattern ')'                        (48)
	Pattern2 -> '[' PatternsWithComma ']'              (49)
	Pattern2 -> id                                     (50)
	Pattern2s ->                                       (51)
	Pattern2s -> Pattern2 Pattern2s                    (52)
	PatternsWithComma ->                               (53)
	PatternsWithComma -> Pattern                       (54)
	PatternsWithComma -> Pattern ',' PatternsWithComma   (55)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	def            { T.Def }
	':='           { T.DefEq }
	if             { T.If }
	then           { T.Then }
	else           { T.Else }
	fun            { T.Fun }
	exist          { T.Exist }
	forall         { T.Forall }
	for            { T.For }
	'=>'           { T.FunTo }
	let            { T.Let }
	in             { T.In }
	match          { T.Match }
	with           { T.With }
	'|'            { T.Bar }
	'#'            { T.ConsLead }
	end            { T.End }
	int            { T.Int $$ }
	float          { T.Float $$ }
	string         { T.String $$ }
	true           { T.TTrue }
	false          { T.TFalse }
	'('            { T.ParenL }
	')'            { T.ParenR }
	'['            { T.BracketL }
	']'            { T.BracketR }
	','            { T.Comma }
	'||'           { T.Op "||" }
	'&&'           { T.Op "&&" }
	'+'            { T.Op "+" }
	'-'            { T.Op "-" }
	'*'            { T.Op "*" }
	'/'            { T.Op "/" }
	'%'            { T.Op "%" }
	'++'           { T.Op "++" }
	'<'            { T.Op "<" }
	'>'            { T.Op ">" }
	'=='           { T.Op "==" }
	'::'           { T.Op "::" }
	';'            { T.Op ";" }
	'@'            { T.At }
	':'            { T.Anno }
	'{'            { T.BraceL }
	'}'            { T.BraceR }
	'<-'           { T.LArrow }
	id             { T.Id $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseTok rule  0
	Program         rules 1, 2
	FuncDecl        rule  3
	ArgList         rules 4, 5
	Term            rules 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30
	Binders         rules 31, 32
	Lit             rules 33, 34, 35, 36, 37, 38
	ListLit         rules 39, 40, 41
	Clauses         rules 42, 43
	Pattern         rules 44, 45
	Pattern1        rules 46, 47
	Pattern2        rules 48, 49, 50
	Pattern2s       rules 51, 52
	PatternsWithComma rules 53, 54, 55

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseTok -> . Program                        (rule 0)

	def            shift, and enter state 4
	%eof           reduce using rule 1

	Program        goto state 2
	FuncDecl       goto state 3

State 1

	Program -> .                                        (rule 1)



State 2

	%start_parseTok -> Program .                        (rule 0)

	%eof           accept


State 3

	Program -> FuncDecl . Program                       (rule 2)

	def            shift, and enter state 4
	%eof           reduce using rule 1

	Program        goto state 6
	FuncDecl       goto state 3

State 4

	FuncDecl -> def . id ArgList ':=' Term              (rule 3)

	id             shift, and enter state 5


State 5

	FuncDecl -> def id . ArgList ':=' Term              (rule 3)

	':='           reduce using rule 4
	id             shift, and enter state 8

	ArgList        goto state 7

State 6

	Program -> FuncDecl Program .                       (rule 2)

	%eof           reduce using rule 2


State 7

	FuncDecl -> def id ArgList . ':=' Term              (rule 3)

	':='           shift, and enter state 10


State 8

	ArgList -> id . ArgList                             (rule 5)

	':='           reduce using rule 4
	'=>'           reduce using rule 4
	id             shift, and enter state 8

	ArgList        goto state 9

State 9

	ArgList -> id ArgList .                             (rule 5)

	':='           reduce using rule 5
	'=>'           reduce using rule 5


State 10

	FuncDecl -> def id ArgList ':=' . Term              (rule 3)

	if             shift, and enter state 13
	fun            shift, and enter state 14
	exist          shift, and enter state 15
	forall         shift, and enter state 16
	for            shift, and enter state 17
	let            shift, and enter state 18
	match          shift, and enter state 19
	int            shift, and enter state 20
	float          shift, and enter state 21
	string         shift, and enter state 22
	true           shift, and enter state 23
	false          shift, and enter state 24
	'('            shift, and enter state 25
	'['            shift, and enter state 26
	'{'            shift, and enter state 27
	id             shift, and enter state 28

	Term           goto state 11
	Lit            goto state 12

State 11

	FuncDecl -> def id ArgList ':=' Term .              (rule 3)
	Term -> Term . Term                                 (rule 13)
	Term -> Term . '||' Term                            (rule 14)
	Term -> Term . '&&' Term                            (rule 15)
	Term -> Term . '+' Term                             (rule 16)
	Term -> Term . '-' Term                             (rule 17)
	Term -> Term . '*' Term                             (rule 18)
	Term -> Term . '/' Term                             (rule 19)
	Term -> Term . '%' Term                             (rule 20)
	Term -> Term . '++' Term                            (rule 21)
	Term -> Term . '<' Term                             (rule 22)
	Term -> Term . '>' Term                             (rule 23)
	Term -> Term . '==' Term                            (rule 24)
	Term -> Term . '::' Term                            (rule 25)
	Term -> Term . ';' Term                             (rule 26)

	def            reduce using rule 3
	if             shift, and enter state 13
	fun            shift, and enter state 14
	exist          shift, and enter state 15
	forall         shift, and enter state 16
	for            shift, and enter state 17
	let            shift, and enter state 18
	match          shift, and enter state 19
	int            shift, and enter state 20
	float          shift, and enter state 21
	string         shift, and enter state 22
	true           shift, and enter state 23
	false          shift, and enter state 24
	'('            shift, and enter state 25
	'['            shift, and enter state 26
	'||'           shift, and enter state 41
	'&&'           shift, and enter state 42
	'+'            shift, and enter state 43
	'-'            shift, and enter state 44
	'*'            shift, and enter state 45
	'/'            shift, and enter state 46
	'%'            shift, and enter state 47
	'++'           shift, and enter state 48
	'<'            shift, and enter state 49
	'>'            shift, and enter state 50
	'=='           shift, and enter state 51
	'::'           shift, and enter state 52
	';'            shift, and enter state 53
	'{'            shift, and enter state 27
	id             shift, and enter state 28
	%eof           reduce using rule 3

	Term           goto state 40
	Lit            goto state 12

State 12

	Term -> Lit .                                       (rule 29)

	def            reduce using rule 29
	if             reduce using rule 29
	then           reduce using rule 29
	else           reduce using rule 29
	fun            reduce using rule 29
	exist          reduce using rule 29
	forall         reduce using rule 29
	for            reduce using rule 29
	'=>'           reduce using rule 29
	let            reduce using rule 29
	in             reduce using rule 29
	match          reduce using rule 29
	with           reduce using rule 29
	'|'            reduce using rule 29
	end            reduce using rule 29
	int            reduce using rule 29
	float          reduce using rule 29
	string         reduce using rule 29
	true           reduce using rule 29
	false          reduce using rule 29
	'('            reduce using rule 29
	')'            reduce using rule 29
	'['            reduce using rule 29
	']'            reduce using rule 29
	','            reduce using rule 29
	'||'           reduce using rule 29
	'&&'           reduce using rule 29
	'+'            reduce using rule 29
	'-'            reduce using rule 29
	'*'            reduce using rule 29
	'/'            reduce using rule 29
	'%'            reduce using rule 29
	'++'           reduce using rule 29
	'<'            reduce using rule 29
	'>'            reduce using rule 29
	'=='           reduce using rule 29
	'::'           reduce using rule 29
	';'            reduce using rule 29
	'@'            reduce using rule 29
	'{'            reduce using rule 29
	'}'            reduce using rule 29
	id             reduce using rule 29
	%eof           reduce using rule 29


State 13

	Term -> if . Term then Term else Term               (rule 7)

	if             shift, and enter state 13
	fun            shift, and enter state 14
	exist          shift, and enter state 15
	forall         shift, and enter state 16
	for            shift, and enter state 17
	let            shift, and enter state 18
	match          shift, and enter state 19
	int            shift, and enter state 20
	float          shift, and enter state 21
	string         shift, and enter state 22
	true           shift, and enter state 23
	false          shift, and enter state 24
	'('            shift, and enter state 25
	'['            shift, and enter state 26
	'{'            shift, and enter state 27
	id             shift, and enter state 28

	Term           goto state 39
	Lit            goto state 12

State 14

	Term -> fun . id '=>' Term                          (rule 8)

	id             shift, and enter state 38


State 15

	Term -> exist . id ':' Term '=>' Term               (rule 10)

	id             shift, and enter state 37


State 16

	Term -> forall . id ':' Term '=>' Term              (rule 9)

	id             shift, and enter state 36


State 17

	Term -> for . id ':' Term '@' id ArgList '=>' Term    (rule 11)

	id             shift, and enter state 35


State 18

	Term -> let . id ':=' Term in Term                  (rule 6)

	id             shift, and enter state 34


State 19

	Term -> match . Term with Clauses end               (rule 12)

	if             shift, and enter state 13
	fun            shift, and enter state 14
	exist          shift, and enter state 15
	forall         shift, and enter state 16
	for            shift, and enter state 17
	let            shift, and enter state 18
	match          shift, and enter state 19
	int            shift, and enter state 20
	float          shift, and enter state 21
	string         shift, and enter state 22
	true           shift, and enter state 23
	false          shift, and enter state 24
	'('            shift, and enter state 25
	'['            shift, and enter state 26
	'{'            shift, and enter state 27
	id             shift, and enter state 28

	Term           goto state 33
	Lit            goto state 12

State 20

	Lit -> int .                                        (rule 35)

	def            reduce using rule 35
	if             reduce using rule 35
	then           reduce using rule 35
	else           reduce using rule 35
	fun            reduce using rule 35
	exist          reduce using rule 35
	forall         reduce using rule 35
	for            reduce using rule 35
	'=>'           reduce using rule 35
	let            reduce using rule 35
	in             reduce using rule 35
	match          reduce using rule 35
	with           reduce using rule 35
	'|'            reduce using rule 35
	end            reduce using rule 35
	int            reduce using rule 35
	float          reduce using rule 35
	string         reduce using rule 35
	true           reduce using rule 35
	false          reduce using rule 35
	'('            reduce using rule 35
	')'            reduce using rule 35
	'['            reduce using rule 35
	']'            reduce using rule 35
	','            reduce using rule 35
	'||'           reduce using rule 35
	'&&'           reduce using rule 35
	'+'            reduce using rule 35
	'-'            reduce using rule 35
	'*'            reduce using rule 35
	'/'            reduce using rule 35
	'%'            reduce using rule 35
	'++'           reduce using rule 35
	'<'            reduce using rule 35
	'>'            reduce using rule 35
	'=='           reduce using rule 35
	'::'           reduce using rule 35
	';'            reduce using rule 35
	'@'            reduce using rule 35
	'{'            reduce using rule 35
	'}'            reduce using rule 35
	id             reduce using rule 35
	%eof           reduce using rule 35


State 21

	Lit -> float .                                      (rule 34)

	def            reduce using rule 34
	if             reduce using rule 34
	then           reduce using rule 34
	else           reduce using rule 34
	fun            reduce using rule 34
	exist          reduce using rule 34
	forall         reduce using rule 34
	for            reduce using rule 34
	'=>'           reduce using rule 34
	let            reduce using rule 34
	in             reduce using rule 34
	match          reduce using rule 34
	with           reduce using rule 34
	'|'            reduce using rule 34
	end            reduce using rule 34
	int            reduce using rule 34
	float          reduce using rule 34
	string         reduce using rule 34
	true           reduce using rule 34
	false          reduce using rule 34
	'('            reduce using rule 34
	')'            reduce using rule 34
	'['            reduce using rule 34
	']'            reduce using rule 34
	','            reduce using rule 34
	'||'           reduce using rule 34
	'&&'           reduce using rule 34
	'+'            reduce using rule 34
	'-'            reduce using rule 34
	'*'            reduce using rule 34
	'/'            reduce using rule 34
	'%'            reduce using rule 34
	'++'           reduce using rule 34
	'<'            reduce using rule 34
	'>'            reduce using rule 34
	'=='           reduce using rule 34
	'::'           reduce using rule 34
	';'            reduce using rule 34
	'@'            reduce using rule 34
	'{'            reduce using rule 34
	'}'            reduce using rule 34
	id             reduce using rule 34
	%eof           reduce using rule 34


State 22

	Lit -> string .                                     (rule 33)

	def            reduce using rule 33
	if             reduce using rule 33
	then           reduce using rule 33
	else           reduce using rule 33
	fun            reduce using rule 33
	exist          reduce using rule 33
	forall         reduce using rule 33
	for            reduce using rule 33
	'=>'           reduce using rule 33
	let            reduce using rule 33
	in             reduce using rule 33
	match          reduce using rule 33
	with           reduce using rule 33
	'|'            reduce using rule 33
	end            reduce using rule 33
	int            reduce using rule 33
	float          reduce using rule 33
	string         reduce using rule 33
	true           reduce using rule 33
	false          reduce using rule 33
	'('            reduce using rule 33
	')'            reduce using rule 33
	'['            reduce using rule 33
	']'            reduce using rule 33
	','            reduce using rule 33
	'||'           reduce using rule 33
	'&&'           reduce using rule 33
	'+'            reduce using rule 33
	'-'            reduce using rule 33
	'*'            reduce using rule 33
	'/'            reduce using rule 33
	'%'            reduce using rule 33
	'++'           reduce using rule 33
	'<'            reduce using rule 33
	'>'            reduce using rule 33
	'=='           reduce using rule 33
	'::'           reduce using rule 33
	';'            reduce using rule 33
	'@'            reduce using rule 33
	'{'            reduce using rule 33
	'}'            reduce using rule 33
	id             reduce using rule 33
	%eof           reduce using rule 33


State 23

	Lit -> true .                                       (rule 36)

	def            reduce using rule 36
	if             reduce using rule 36
	then           reduce using rule 36
	else           reduce using rule 36
	fun            reduce using rule 36
	exist          reduce using rule 36
	forall         reduce using rule 36
	for            reduce using rule 36
	'=>'           reduce using rule 36
	let            reduce using rule 36
	in             reduce using rule 36
	match          reduce using rule 36
	with           reduce using rule 36
	'|'            reduce using rule 36
	end            reduce using rule 36
	int            reduce using rule 36
	float          reduce using rule 36
	string         reduce using rule 36
	true           reduce using rule 36
	false          reduce using rule 36
	'('            reduce using rule 36
	')'            reduce using rule 36
	'['            reduce using rule 36
	']'            reduce using rule 36
	','            reduce using rule 36
	'||'           reduce using rule 36
	'&&'           reduce using rule 36
	'+'            reduce using rule 36
	'-'            reduce using rule 36
	'*'            reduce using rule 36
	'/'            reduce using rule 36
	'%'            reduce using rule 36
	'++'           reduce using rule 36
	'<'            reduce using rule 36
	'>'            reduce using rule 36
	'=='           reduce using rule 36
	'::'           reduce using rule 36
	';'            reduce using rule 36
	'@'            reduce using rule 36
	'{'            reduce using rule 36
	'}'            reduce using rule 36
	id             reduce using rule 36
	%eof           reduce using rule 36


State 24

	Lit -> false .                                      (rule 37)

	def            reduce using rule 37
	if             reduce using rule 37
	then           reduce using rule 37
	else           reduce using rule 37
	fun            reduce using rule 37
	exist          reduce using rule 37
	forall         reduce using rule 37
	for            reduce using rule 37
	'=>'           reduce using rule 37
	let            reduce using rule 37
	in             reduce using rule 37
	match          reduce using rule 37
	with           reduce using rule 37
	'|'            reduce using rule 37
	end            reduce using rule 37
	int            reduce using rule 37
	float          reduce using rule 37
	string         reduce using rule 37
	true           reduce using rule 37
	false          reduce using rule 37
	'('            reduce using rule 37
	')'            reduce using rule 37
	'['            reduce using rule 37
	']'            reduce using rule 37
	','            reduce using rule 37
	'||'           reduce using rule 37
	'&&'           reduce using rule 37
	'+'            reduce using rule 37
	'-'            reduce using rule 37
	'*'            reduce using rule 37
	'/'            reduce using rule 37
	'%'            reduce using rule 37
	'++'           reduce using rule 37
	'<'            reduce using rule 37
	'>'            reduce using rule 37
	'=='           reduce using rule 37
	'::'           reduce using rule 37
	';'            reduce using rule 37
	'@'            reduce using rule 37
	'{'            reduce using rule 37
	'}'            reduce using rule 37
	id             reduce using rule 37
	%eof           reduce using rule 37


State 25

	Term -> '(' . Term ')'                              (rule 27)

	if             shift, and enter state 13
	fun            shift, and enter state 14
	exist          shift, and enter state 15
	forall         shift, and enter state 16
	for            shift, and enter state 17
	let            shift, and enter state 18
	match          shift, and enter state 19
	int            shift, and enter state 20
	float          shift, and enter state 21
	string         shift, and enter state 22
	true           shift, and enter state 23
	false          shift, and enter state 24
	'('            shift, and enter state 25
	'['            shift, and enter state 26
	'{'            shift, and enter state 27
	id             shift, and enter state 28

	Term           goto state 32
	Lit            goto state 12

State 26

	Lit -> '[' . ListLit ']'                            (rule 38)

	if             shift, and enter state 13
	fun            shift, and enter state 14
	exist          shift, and enter state 15
	forall         shift, and enter state 16
	for            shift, and enter state 17
	let            shift, and enter state 18
	match          shift, and enter state 19
	int            shift, and enter state 20
	float          shift, and enter state 21
	string         shift, and enter state 22
	true           shift, and enter state 23
	false          shift, and enter state 24
	'('            shift, and enter state 25
	'['            shift, and enter state 26
	']'            reduce using rule 39
	'{'            shift, and enter state 27
	id             shift, and enter state 28

	Term           goto state 30
	Lit            goto state 12
	ListLit        goto state 31

State 27

	Term -> '{' . Term '|' Binders '}'                  (rule 28)

	if             shift, and enter state 13
	fun            shift, and enter state 14
	exist          shift, and enter state 15
	forall         shift, and enter state 16
	for            shift, and enter state 17
	let            shift, and enter state 18
	match          shift, and enter state 19
	int            shift, and enter state 20
	float          shift, and enter state 21
	string         shift, and enter state 22
	true           shift, and enter state 23
	false          shift, and enter state 24
	'('            shift, and enter state 25
	'['            shift, and enter state 26
	'{'            shift, and enter state 27
	id             shift, and enter state 28

	Term           goto state 29
	Lit            goto state 12

State 28

	Term -> id .                                        (rule 30)

	def            reduce using rule 30
	if             reduce using rule 30
	then           reduce using rule 30
	else           reduce using rule 30
	fun            reduce using rule 30
	exist          reduce using rule 30
	forall         reduce using rule 30
	for            reduce using rule 30
	'=>'           reduce using rule 30
	let            reduce using rule 30
	in             reduce using rule 30
	match          reduce using rule 30
	with           reduce using rule 30
	'|'            reduce using rule 30
	end            reduce using rule 30
	int            reduce using rule 30
	float          reduce using rule 30
	string         reduce using rule 30
	true           reduce using rule 30
	false          reduce using rule 30
	'('            reduce using rule 30
	')'            reduce using rule 30
	'['            reduce using rule 30
	']'            reduce using rule 30
	','            reduce using rule 30
	'||'           reduce using rule 30
	'&&'           reduce using rule 30
	'+'            reduce using rule 30
	'-'            reduce using rule 30
	'*'            reduce using rule 30
	'/'            reduce using rule 30
	'%'            reduce using rule 30
	'++'           reduce using rule 30
	'<'            reduce using rule 30
	'>'            reduce using rule 30
	'=='           reduce using rule 30
	'::'           reduce using rule 30
	';'            reduce using rule 30
	'@'            reduce using rule 30
	'{'            reduce using rule 30
	'}'            reduce using rule 30
	id             reduce using rule 30
	%eof           reduce using rule 30


State 29

	Term -> Term . Term                                 (rule 13)
	Term -> Term . '||' Term                            (rule 14)
	Term -> Term . '&&' Term                            (rule 15)
	Term -> Term . '+' Term                             (rule 16)
	Term -> Term . '-' Term                             (rule 17)
	Term -> Term . '*' Term                             (rule 18)
	Term -> Term . '/' Term                             (rule 19)
	Term -> Term . '%' Term                             (rule 20)
	Term -> Term . '++' Term                            (rule 21)
	Term -> Term . '<' Term                             (rule 22)
	Term -> Term . '>' Term                             (rule 23)
	Term -> Term . '==' Term                            (rule 24)
	Term -> Term . '::' Term                            (rule 25)
	Term -> Term . ';' Term                             (rule 26)
	Term -> '{' Term . '|' Binders '}'                  (rule 28)

	if             shift, and enter state 13
	fun            shift, and enter state 14
	exist          shift, and enter state 15
	forall         shift, and enter state 16
	for            shift, and enter state 17
	let            shift, and enter state 18
	match          shift, and enter state 19
	'|'            shift, and enter state 77
	int            shift, and enter state 20
	float          shift, and enter state 21
	string         shift, and enter state 22
	true           shift, and enter state 23
	false          shift, and enter state 24
	'('            shift, and enter state 25
	'['            shift, and enter state 26
	'||'           shift, and enter state 41
	'&&'           shift, and enter state 42
	'+'            shift, and enter state 43
	'-'            shift, and enter state 44
	'*'            shift, and enter state 45
	'/'            shift, and enter state 46
	'%'            shift, and enter state 47
	'++'           shift, and enter state 48
	'<'            shift, and enter state 49
	'>'            shift, and enter state 50
	'=='           shift, and enter state 51
	'::'           shift, and enter state 52
	';'            shift, and enter state 53
	'{'            shift, and enter state 27
	id             shift, and enter state 28

	Term           goto state 40
	Lit            goto state 12

State 30

	Term -> Term . Term                                 (rule 13)
	Term -> Term . '||' Term                            (rule 14)
	Term -> Term . '&&' Term                            (rule 15)
	Term -> Term . '+' Term                             (rule 16)
	Term -> Term . '-' Term                             (rule 17)
	Term -> Term . '*' Term                             (rule 18)
	Term -> Term . '/' Term                             (rule 19)
	Term -> Term . '%' Term                             (rule 20)
	Term -> Term . '++' Term                            (rule 21)
	Term -> Term . '<' Term                             (rule 22)
	Term -> Term . '>' Term                             (rule 23)
	Term -> Term . '==' Term                            (rule 24)
	Term -> Term . '::' Term                            (rule 25)
	Term -> Term . ';' Term                             (rule 26)
	ListLit -> Term .                                   (rule 40)
	ListLit -> Term . ',' ListLit                       (rule 41)

	if             shift, and enter state 13
	fun            shift, and enter state 14
	exist          shift, and enter state 15
	forall         shift, and enter state 16
	for            shift, and enter state 17
	let            shift, and enter state 18
	match          shift, and enter state 19
	int            shift, and enter state 20
	float          shift, and enter state 21
	string         shift, and enter state 22
	true           shift, and enter state 23
	false          shift, and enter state 24
	'('            shift, and enter state 25
	'['            shift, and enter state 26
	']'            reduce using rule 40
	','            shift, and enter state 76
	'||'           shift, and enter state 41
	'&&'           shift, and enter state 42
	'+'            shift, and enter state 43
	'-'            shift, and enter state 44
	'*'            shift, and enter state 45
	'/'            shift, and enter state 46
	'%'            shift, and enter state 47
	'++'           shift, and enter state 48
	'<'            shift, and enter state 49
	'>'            shift, and enter state 50
	'=='           shift, and enter state 51
	'::'           shift, and enter state 52
	';'            shift, and enter state 53
	'{'            shift, and enter state 27
	id             shift, and enter state 28

	Term           goto state 40
	Lit            goto state 12

State 31

	Lit -> '[' ListLit . ']'                            (rule 38)

	']'            shift, and enter state 75


State 32

	Term -> Term . Term                                 (rule 13)
	Term -> Term . '||' Term                            (rule 14)
	Term -> Term . '&&' Term                            (rule 15)
	Term -> Term . '+' Term                             (rule 16)
	Term -> Term . '-' Term                             (rule 17)
	Term -> Term . '*' Term                             (rule 18)
	Term -> Term . '/' Term                             (rule 19)
	Term -> Term . '%' Term                             (rule 20)
	Term -> Term . '++' Term                            (rule 21)
	Term -> Term . '<' Term                             (rule 22)
	Term -> Term . '>' Term                             (rule 23)
	Term -> Term . '==' Term                            (rule 24)
	Term -> Term . '::' Term                            (rule 25)
	Term -> Term . ';' Term                             (rule 26)
	Term -> '(' Term . ')'                              (rule 27)

	if             shift, and enter state 13
	fun            shift, and enter state 14
	exist          shift, and enter state 15
	forall         shift, and enter state 16
	for            shift, and enter state 17
	let            shift, and enter state 18
	match          shift, and enter state 19
	int            shift, and enter state 20
	float          shift, and enter state 21
	string         shift, and enter state 22
	true           shift, and enter state 23
	false          shift, and enter state 24
	'('            shift, and enter state 25
	')'            shift, and enter state 74
	'['            shift, and enter state 26
	'||'           shift, and enter state 41
	'&&'           shift, and enter state 42
	'+'            shift, and enter state 43
	'-'            shift, and enter state 44
	'*'            shift, and enter state 45
	'/'            shift, and enter state 46
	'%'            shift, and enter state 47
	'++'           shift, and enter state 48
	'<'            shift, and enter state 49
	'>'            shift, and enter state 50
	'=='           shift, and enter state 51
	'::'           shift, and enter state 52
	';'            shift, and enter state 53
	'{'            shift, and enter state 27
	id             shift, and enter state 28

	Term           goto state 40
	Lit            goto state 12

State 33

	Term -> match Term . with Clauses end               (rule 12)
	Term -> Term . Term                                 (rule 13)
	Term -> Term . '||' Term                            (rule 14)
	Term -> Term . '&&' Term                            (rule 15)
	Term -> Term . '+' Term                             (rule 16)
	Term -> Term . '-' Term                             (rule 17)
	Term -> Term . '*' Term                             (rule 18)
	Term -> Term . '/' Term                             (rule 19)
	Term -> Term . '%' Term                             (rule 20)
	Term -> Term . '++' Term                            (rule 21)
	Term -> Term . '<' Term                             (rule 22)
	Term -> Term . '>' Term                             (rule 23)
	Term -> Term . '==' Term                            (rule 24)
	Term -> Term . '::' Term                            (rule 25)
	Term -> Term . ';' Term                             (rule 26)

	if             shift, and enter state 13
	fun            shift, and enter state 14
	exist          shift, and enter state 15
	forall         shift, and enter state 16
	for            shift, and enter state 17
	let            shift, and enter state 18
	match          shift, and enter state 19
	with           shift, and enter state 73
	int            shift, and enter state 20
	float          shift, and enter state 21
	string         shift, and enter state 22
	true           shift, and enter state 23
	false          shift, and enter state 24
	'('            shift, and enter state 25
	'['            shift, and enter state 26
	'||'           shift, and enter state 41
	'&&'           shift, and enter state 42
	'+'            shift, and enter state 43
	'-'            shift, and enter state 44
	'*'            shift, and enter state 45
	'/'            shift, and enter state 46
	'%'            shift, and enter state 47
	'++'           shift, and enter state 48
	'<'            shift, and enter state 49
	'>'            shift, and enter state 50
	'=='           shift, and enter state 51
	'::'           shift, and enter state 52
	';'            shift, and enter state 53
	'{'            shift, and enter state 27
	id             shift, and enter state 28

	Term           goto state 40
	Lit            goto state 12

State 34

	Term -> let id . ':=' Term in Term                  (rule 6)

	':='           shift, and enter state 72


State 35

	Term -> for id . ':' Term '@' id ArgList '=>' Term    (rule 11)

	':'            shift, and enter state 71


State 36

	Term -> forall id . ':' Term '=>' Term              (rule 9)

	':'            shift, and enter state 70


State 37

	Term -> exist id . ':' Term '=>' Term               (rule 10)

	':'            shift, and enter state 69


State 38

	Term -> fun id . '=>' Term                          (rule 8)

	'=>'           shift, and enter state 68


State 39

	Term -> if Term . then Term else Term               (rule 7)
	Term -> Term . Term                                 (rule 13)
	Term -> Term . '||' Term                            (rule 14)
	Term -> Term . '&&' Term                            (rule 15)
	Term -> Term . '+' Term                             (rule 16)
	Term -> Term . '-' Term                             (rule 17)
	Term -> Term . '*' Term                             (rule 18)
	Term -> Term . '/' Term                             (rule 19)
	Term -> Term . '%' Term                             (rule 20)
	Term -> Term . '++' Term                            (rule 21)
	Term -> Term . '<' Term                             (rule 22)
	Term -> Term . '>' Term                             (rule 23)
	Term -> Term . '==' Term                            (rule 24)
	Term -> Term . '::' Term                            (rule 25)
	Term -> Term . ';' Term                             (rule 26)

	if             shift, and enter state 13
	then           shift, and enter state 67
	fun            shift, and enter state 14
	exist          shift, and enter state 15
	forall         shift, and enter state 16
	for            shift, and enter state 17
	let            shift, and enter state 18
	match          shift, and enter state 19
	int            shift, and enter state 20
	float          shift, and enter state 21
	string         shift, and enter state 22
	true           shift, and enter state 23
	false          shift, and enter state 24
	'('            shift, and enter state 25
	'['            shift, and enter state 26
	'||'           shift, and enter state 41
	'&&'           shift, and enter state 42
	'+'            shift, and enter state 43
	'-'            shift, and enter state 44
	'*'            shift, and enter state 45
	'/'            shift, and enter state 46
	'%'            shift, and enter state 47
	'++'           shift, and enter state 48
	'<'            shift, and enter state 49
	'>'            shift, and enter state 50
	'=='           shift, and enter state 51
	'::'           shift, and enter state 52
	';'            shift, and enter state 53
	'{'            shift, and enter state 27
	id             shift, and enter state 28

	Term           goto state 40
	Lit            goto state 12

State 40

	Term -> Term . Term                                 (rule 13)
	Term -> Term Term .                                 (rule 13)
	Term -> Term . '||' Term                            (rule 14)
	Term -> Term . '&&' Term                            (rule 15)
	Term -> Term . '+' Term                             (rule 16)
	Term -> Term . '-' Term                             (rule 17)
	Term -> Term . '*' Term                             (rule 18)
	Term -> Term . '/' Term                             (rule 19)
	Term -> Term . '%' Term                             (rule 20)
	Term -> Term . '++' Term                            (rule 21)
	Term -> Term . '<' Term                             (rule 22)
	Term -> Term . '>' Term                             (rule 23)
	Term -> Term . '==' Term                            (rule 24)
	Term -> Term . '::' Term                            (rule 25)
	Term -> Term . ';' Term                             (rule 26)

	def            reduce using rule 13
	if             reduce using rule 13
	then           reduce using rule 13
	else           reduce using rule 13
	fun            reduce using rule 13
	exist          reduce using rule 13
	forall         reduce using rule 13
	for            reduce using rule 13
	'=>'           reduce using rule 13
	let            reduce using rule 13
	in             reduce using rule 13
	match          reduce using rule 13
	with           reduce using rule 13
	'|'            reduce using rule 13
	end            reduce using rule 13
	int            reduce using rule 13
	float          reduce using rule 13
	string         reduce using rule 13
	true           reduce using rule 13
	false          reduce using rule 13
	'('            reduce using rule 13
	')'            reduce using rule 13
	'['            reduce using rule 13
	']'            reduce using rule 13
	','            reduce using rule 13
	'||'           reduce using rule 13
	'&&'           reduce using rule 13
	'+'            reduce using rule 13
	'-'            reduce using rule 13
	'*'            reduce using rule 13
	'/'            reduce using rule 13
	'%'            reduce using rule 13
	'++'           reduce using rule 13
	'<'            reduce using rule 13
	'>'            reduce using rule 13
	'=='           reduce using rule 13
	'::'           reduce using rule 13
	';'            reduce using rule 13
	'@'            reduce using rule 13
	'{'            reduce using rule 13
	'}'            reduce using rule 13
	id             reduce using rule 13
	%eof           reduce using rule 13

	Term           goto state 40
	Lit            goto state 12

State 41

	Term -> Term '||' . Term                            (rule 14)
